Replace deprecated Thread#getId usage with Thread#threadId
chery-picked from https://github.com/PaperMC/Paper/commit/2ba1675c7506cadd8a540ea452e5dafb79ae8947